--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"axios": "^0.18.0",
 		"body-parser": "^1.18.3",
 		"compression": "^1.7.3",
+		"dotenv": "^6.0.0",
 		"express": "^4.16.3",
 		"firebase": "^5.5.0",
 		"helmet": "^3.13.0",
