--- a/package.json
+++ b/package.json
@@ -1,28 +1,47 @@
 {
-	"name": "podcastvue",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"serve": "vue-cli-service serve --port 80",
-		"build": "vue-cli-service build"
-	},
-	"dependencies": {
-		"amplitudejs": "^3.3.1",
-		"axios": "^0.18.0",
-		"body-parser": "^1.18.3",
-		"compression": "^1.7.3",
-		"express": "^4.16.3",
-		"firebase": "^5.5.0",
-		"helmet": "^3.13.0",
-		"register-service-worker": "^1.0.0",
-		"vue": "^2.5.17",
-		"vue-router": "^3.0.1",
-		"vuex": "^3.0.1"
-	},
-	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.0.3",
-		"@vue/cli-plugin-pwa": "^3.0.3",
-		"@vue/cli-service": "^3.0.3",
-		"vue-template-compiler": "^2.5.17"
-	}
+  "name": "podcastvue",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "@vue/composition-api": "^0.3.2",
+    "core-js": "^3.4.5",
+    "tailwindcss": "^1.1.4",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-airbnb": "^4.0.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential"
+    ],
+    "rules": {
+      "allowIndentationTabs": true,
+      "disallowTabs": false
+    },
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
