--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "compression": "^1.7.4",
     "core-js": "^3.4.5",
     "express": "^4.17.1",
+    "firebase": "^7.5.0",
     "helmet": "^3.21.2",
     "tailwindcss": "^1.1.4",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
